[package]
name = "rcc1"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
mockall = "0.11.4"
