[package]
name = "rcc1"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
ctor = "0.2.6"
hamcrest2 = "0.3"
mockall = "0.11.4"
tempfile = "3.1.0"
temp_testdir = "0.2"
